Atualizando rodada 3 mais simulacao de placares

--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -20,12 +20,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoA)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoA)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoA)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoA)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoA)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoA)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoA)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -52,12 +52,12 @@
                 <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoB)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoB)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoB)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoB)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoB)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoB)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoB)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -84,12 +84,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoC)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoC)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoC)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoC)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoC)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoC)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoC)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -116,12 +116,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoD)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoD)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoD)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoD)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoD)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoD)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoD)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -148,12 +148,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoE)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoE)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoE)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoE)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoE)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoE)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoE)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -180,12 +180,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoF)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoF)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoF)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoF)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoF)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoF)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoF)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -212,12 +212,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoG)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoG)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoG)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoG)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoG)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoG)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoG)}}</th>
                 </tr>
         </tbody>
     </table>
@@ -244,12 +244,12 @@
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoH)}}</th>
-                    <th>{{selecao.vitorias}}</th>
-                    <th>{{selecao.empates}}</th>
-                    <th>{{selecao.derrotas}}</th>
-                    <th>{{selecao.golspro}}</th>
-                    <th>{{selecao.golscontra}}</th>
-                    <th>{{selecao.saldogols}}</th>
+                    <th>{{atualizaVitorias(selecao,grupoH)}}</th>
+                    <th>{{atualizaEmpate(selecao,grupoH)}}</th>
+                    <th>{{atualizaDerrota(selecao,grupoH)}}</th>
+                    <th>{{atualizaGolsPro(selecao,grupoH)}}</th>
+                    <th>{{atualizaGolsContra(selecao,grupoH)}}</th>
+                    <th>{{atualizaSaldoGols(selecao,grupoH)}}</th>
                 </tr>
         </tbody>
     </table>
