--- a/src/app/rodada/rodada3/rodada3.component.html
+++ b/src/app/rodada/rodada3/rodada3.component.html
@@ -7,12 +7,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoA[0].g3"
            (change)="mudaResultadoR3(grupoA[0],grupoA[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[3].g3"
            (change)="mudaResultadoR3(grupoA[0],grupoA[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label  class="col-4 text-center" 
             for="">{{grupoA[3].nome}}</label>
@@ -22,12 +22,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoA[1].g3"
            (change)="mudaResultadoR3(grupoA[1],grupoA[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[2].g3"
            (change)="mudaResultadoR3(grupoA[1],grupoA[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label class="col-4 text-center" 
            for="">{{grupoA[2].nome}}</label>
@@ -44,12 +44,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoB[0].g3"
            (change)="mudaResultadoR3(grupoB[0],grupoB[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[3].g3"
            (change)="mudaResultadoR3(grupoB[0],grupoB[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
             class="col-4 text-center" 
@@ -61,12 +61,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoB[1].g3"
            (change)="mudaResultadoR3(grupoB[1],grupoB[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[2].g3"
            (change)="mudaResultadoR3(grupoB[1],grupoB[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label 
            class="col-4 text-center" 
@@ -84,12 +84,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoC[0].g3"
            (change)="mudaResultadoR3(grupoC[0],grupoC[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[3].g3"
            (change)="mudaResultadoR3(grupoC[0],grupoC[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
             class="col-4 text-center" 
@@ -101,12 +101,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoC[1].g3"
            (change)="mudaResultadoR3(grupoC[1],grupoC[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[2].g3"
            (change)="mudaResultadoR3(grupoC[1],grupoC[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
            class="col-4 text-center" 
@@ -124,12 +124,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoD[0].g3"
            (change)="mudaResultadoR3(grupoD[0],grupoD[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[3].g3"
            (change)="mudaResultadoR3(grupoD[0],grupoD[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label 
             class="col-4 text-center" 
@@ -141,12 +141,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoD[1].g3"
            (change)="mudaResultadoR3(grupoD[1],grupoD[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[2].g3"
            (change)="mudaResultadoR3(grupoD[1],grupoD[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label 
            class="col-4 text-center" 
@@ -164,12 +164,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoE[0].g3"
            (change)="mudaResultadoR3(grupoE[0],grupoE[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[3].g3"
            (change)="mudaResultadoR3(grupoE[0],grupoE[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label 
             class="col-4 text-center" 
@@ -181,12 +181,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoE[1].g3"
            (change)="mudaResultadoR3(grupoE[1],grupoE[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[2].g3"
            (change)="mudaResultadoR3(grupoE[1],grupoE[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
            class="col-4 text-center" 
@@ -204,12 +204,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoF[0].g3"
            (change)="mudaResultadoR3(grupoF[0],grupoF[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[3].g3"
            (change)="mudaResultadoR3(grupoF[0],grupoF[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
             class="col-4 text-center" 
@@ -221,12 +221,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoF[1].g3"
            (change)="mudaResultadoR3(grupoF[1],grupoF[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[2].g3"
            (change)="mudaResultadoR3(grupoF[1],grupoF[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
            class="col-4 text-center" 
@@ -244,12 +244,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoG[0].g3"
            (change)="mudaResultadoR3(grupoG[0],grupoG[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[3].g3"
            (change)="mudaResultadoR3(grupoG[0],grupoG[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
             class="col-4 text-center" 
@@ -261,12 +261,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoG[1].g3"
            (change)="mudaResultadoR3(grupoG[1],grupoG[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[2].g3"
            (change)="mudaResultadoR3(grupoG[1],grupoG[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label 
            class="col-4 text-center" 
@@ -284,12 +284,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoH[0].g3"
            (change)="mudaResultadoR3(grupoH[0],grupoH[3],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[3].g3"
            (change)="mudaResultadoR3(grupoH[0],grupoH[3],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
             class="col-4 text-center" 
@@ -301,12 +301,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoH[1].g3"
            (change)="mudaResultadoR3(grupoH[1],grupoH[2],3)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[2].g3"
            (change)="mudaResultadoR3(grupoH[1],grupoH[2],3)"
-           type="number"
+           type="text"
            min="0">
     <label  
            class="col-4 text-center" 
