Estilizando tabelas e rodadas

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,3 +16,11 @@
     padding-bottom: 10px;
     border-bottom: 2px solid #ececec;
 }
+
+.fa-angles-right{
+    font-size: 30px;
+}
+
+.fa-angles-left{
+    font-size: 30px;
+}
