--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,11 @@
       <h1>Bolão Copa Qatar 2022</h1>
     </div>
     <div class="col-12 faseDeGrupos_botoes">
-      <button [disabled]="">LEFT</button>
+      <a href=""><i class="fa-solid fa-angles-left"></i></a>
       <h2>Fase de grupos</h2>
       <!-- {{mostraRodada()}} -->
-      <button [disabled]="">Right</button>
+      <a href=""><i class="fa-solid fa-angles-right"></i></a>
+      
     </div>
     <div class="col-8">
       
