--- a/src/app/tabela/tabela.component.css
+++ b/src/app/tabela/tabela.component.css
@@ -1,3 +1,21 @@
 .flag-icon-background {background-size: contain;
 background-position: 50%;
 background-repeat: no-repeat;}
+
+.tabelas-titulo{
+    height: 80px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.table{
+    margin: 0;
+}
+
+.tabela-corpo{
+    height: 206px;
+}
+
+.tabela-selecao{
+    width: 254px;
+}
