--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -1,42 +1,49 @@
 <div class="grupos">
-    <h3>Grupo A</h3>
-    <span class="flag-icon flag-icon-br"></span>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Seleção</th>
-                <th scope="col">Pts</th>
-                <th scope="col">PJ</th>
-                <th scope="col">V</th>
-                <th scope="col">E</th>
-                <th scope="col">D</th>
-                <th scope="col">GP</th>
-                <th scope="col">GC</th>
-                <th scope="col">SG</th>
-            </tr>
-        </thead>
-        <tbody *ngIf="grupoA">
-            <tr *ngFor="let selecao of grupoA; index as i">
-                    <th>{{selecao.nome}}</th>
-                    <th>{{selecao.pontos}}</th>
-                    <th>{{atualizaPartidas(selecao,grupoA)}}</th>
-                    <th>{{atualizaVitorias(selecao,grupoA)}}</th>
-                    <th>{{atualizaEmpate(selecao,grupoA)}}</th>
-                    <th>{{atualizaDerrota(selecao,grupoA)}}</th>
-                    <th>{{atualizaGolsPro(selecao,grupoA)}}</th>
-                    <th>{{atualizaGolsContra(selecao,grupoA)}}</th>
-                    <th>{{atualizaSaldoGols(selecao,grupoA)}}</th>
+    <div class="tabelas-titulo">
+        <h3>Grupo A</h3>
+    </div>
+    <!-- <span class="flag-icon flag-icon-br"></span> -->
+    <div class="tabela-corpo">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Classificação</th>
+                    <th scope="col">Pts</th>
+                    <th scope="col">PJ</th>
+                    <th scope="col">V</th>
+                    <th scope="col">E</th>
+                    <th scope="col">D</th>
+                    <th scope="col">GP</th>
+                    <th scope="col">GC</th>
+                    <th scope="col">SG</th>
                 </tr>
-        </tbody>
-    </table>
+            </thead>
+            <tbody *ngIf="grupoA">
+                <tr *ngFor="let selecao of grupoA; index as i">
+                        <th class="tabela-selecao">{{selecao.nome}}</th>
+                        <th>{{selecao.pontos}}</th>
+                        <th>{{atualizaPartidas(selecao,grupoA)}}</th>
+                        <th>{{atualizaVitorias(selecao,grupoA)}}</th>
+                        <th>{{atualizaEmpate(selecao,grupoA)}}</th>
+                        <th>{{atualizaDerrota(selecao,grupoA)}}</th>
+                        <th>{{atualizaGolsPro(selecao,grupoA)}}</th>
+                        <th>{{atualizaGolsContra(selecao,grupoA)}}</th>
+                        <th>{{atualizaSaldoGols(selecao,grupoA)}}</th>
+                    </tr>
+            </tbody>
+        </table>
+    </div>
+    
 </div>
 
 <div class="grupos">
-    <h3>Grupo B</h3>
+    <div class="tabelas-titulo">
+        <h3>Grupo B</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -49,7 +56,7 @@
         </thead>
         <tbody *ngIf="grupoB">
             <tr *ngFor="let selecao of grupoB; index as i">
-                <th>{{selecao.nome}}</th>
+                <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoB)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoB)}}</th>
@@ -64,11 +71,13 @@
 </div>
 
 <div class="grupos">
-    <h3>Grupo C</h3>
+    <<div class="tabelas-titulo">
+        <h3>Grupo C</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -81,7 +90,7 @@
         </thead>
         <tbody *ngIf="grupoC">
             <tr *ngFor="let selecao of grupoC; index as i">
-                    <th>{{selecao.nome}}</th>
+                    <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoC)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoC)}}</th>
@@ -96,11 +105,13 @@
 </div>
 
 <div class="grupos">
-    <h3>Grupo D</h3>
+    <<div class="tabelas-titulo">
+        <h3>Grupo D</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -113,7 +124,7 @@
         </thead>
         <tbody *ngIf="grupoD">
             <tr *ngFor="let selecao of grupoD; index as i">
-                    <th>{{selecao.nome}}</th>
+                    <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoD)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoD)}}</th>
@@ -128,11 +139,13 @@
 </div>
 
 <div class="grupos">
-    <h3>Grupo E</h3>
+    <div class="tabelas-titulo">
+        <h3>Grupo E</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -145,7 +158,7 @@
         </thead>
         <tbody *ngIf="grupoE">
             <tr *ngFor="let selecao of grupoE; index as i">
-                    <th>{{selecao.nome}}</th>
+                    <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoE)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoE)}}</th>
@@ -160,11 +173,13 @@
 </div>
 
 <div class="grupos">
-    <h3>Grupo F</h3>
+    <div class="tabelas-titulo">
+        <h3>Grupo F</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -177,7 +192,7 @@
         </thead>
         <tbody *ngIf="grupoF">
             <tr *ngFor="let selecao of grupoF; index as i">
-                    <th>{{selecao.nome}}</th>
+                    <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoF)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoF)}}</th>
@@ -192,11 +207,13 @@
 </div>
 
 <div class="grupos">
-    <h3>Grupo G</h3>
+    <div class="tabelas-titulo">
+        <h3>Grupo G</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -209,7 +226,7 @@
         </thead>
         <tbody *ngIf="grupoG">
             <tr *ngFor="let selecao of grupoG; index as i">
-                    <th>{{selecao.nome}}</th>
+                    <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoG)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoG)}}</th>
@@ -224,11 +241,13 @@
 </div>
 
 <div class="grupos">
-    <h3>Grupo H</h3>
+    <div class="tabelas-titulo">
+        <h3>Grupo H</h3>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Seleção</th>
+                <th scope="col">Classificação</th>
                 <th scope="col">Pts</th>
                 <th scope="col">PJ</th>
                 <th scope="col">V</th>
@@ -241,7 +260,7 @@
         </thead>
         <tbody *ngIf="grupoH">
             <tr *ngFor="let selecao of grupoH; index as i">
-                    <th>{{selecao.nome}}</th>
+                    <th class="tabela-selecao">{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{atualizaPartidas(selecao,grupoH)}}</th>
                     <th>{{atualizaVitorias(selecao,grupoH)}}</th>
