--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -71,7 +71,7 @@
 </div>
 
 <div class="grupos">
-    <<div class="tabelas-titulo">
+    <div class="tabelas-titulo">
         <h3>Grupo C</h3>
     </div>
     <table class="table">
@@ -105,7 +105,7 @@
 </div>
 
 <div class="grupos">
-    <<div class="tabelas-titulo">
+    <div class="tabelas-titulo">
         <h3>Grupo D</h3>
     </div>
     <table class="table">
