--- a/src/app/rodada/rodada1/rodada1.component.html
+++ b/src/app/rodada/rodada1/rodada1.component.html
@@ -3,22 +3,22 @@
        <div *ngIf="grupoA" class="grupos-rodadas">
               <div class="grupos-conteudos-confrontos">
                      <div class="grupos-rodadas-confrontos">
-                            <label *ngIf="grupoA" class="col-4 text-center" for="">{{grupoA[0].nome}}</label>
+                            <label class="col-4 text-center" for="">{{grupoA[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoA[0].g1"
-                                   (change)="mudaResultado(grupoA[0],grupoA[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoA[0],grupoA[1],1,'A')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoA[1].g1"
-                                   (change)="mudaResultado(grupoA[0],grupoA[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoA[0],grupoA[1],1,'A')" type="text" min="0">
                             <label *ngIf="grupoA[1]" class="col-4 text-center" for="">{{grupoA[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoA[2]" class="col-4 text-center" for="">{{grupoA[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoA[2].g1"
-                                   (change)="mudaResultado(grupoA[2],grupoA[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoA[2],grupoA[3],1,'A')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoA[3].g1"
-                                   (change)="mudaResultado(grupoA[2],grupoA[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoA[2],grupoA[3],1,'A')" type="text" min="0">
                             <label *ngIf="grupoA[3]" class="col-4 text-center" for="">{{grupoA[3].nome}}</label>
                      </div>
               </div>
@@ -33,20 +33,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoB" class="col-4 text-center" for="">{{grupoB[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoB[0].g1"
-                                   (change)="mudaResultado(grupoB[0],grupoB[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoB[0],grupoB[1],1,'B')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoB[1].g1"
-                                   (change)="mudaResultado(grupoB[0],grupoB[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoB[0],grupoB[1],1,'B')" type="text" min="0">
                             <label *ngIf="grupoB[1]" class="col-4 text-center" for="">{{grupoB[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoB[2]" class="col-4 text-center" for="">{{grupoB[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoB[2].g1"
-                                   (change)="mudaResultado(grupoB[2],grupoB[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoB[2],grupoB[3],1,'B')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoB[3].g1"
-                                   (change)="mudaResultado(grupoB[2],grupoB[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoB[2],grupoB[3],1,'B')" type="text" min="0">
                             <label *ngIf="grupoB[3]" class="col-4 text-center" for="">{{grupoB[3].nome}}</label>
                      </div>
               </div>
@@ -58,20 +58,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoC" class="col-4 text-center" for="">{{grupoC[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoC[0].g1"
-                                   (change)="mudaResultado(grupoC[0],grupoC[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoC[0],grupoC[1],1,'C')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoC[1].g1"
-                                   (change)="mudaResultado(grupoC[0],grupoC[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoC[0],grupoC[1],1,'C')" type="text" min="0">
                             <label *ngIf="grupoC[1]" class="col-4 text-center" for="">{{grupoC[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoC[2]" class="col-4 text-center" for="">{{grupoC[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoC[2].g1"
-                                   (change)="mudaResultado(grupoC[2],grupoC[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoC[2],grupoC[3],1,'C')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoC[3].g1"
-                                   (change)="mudaResultado(grupoC[2],grupoC[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoC[2],grupoC[3],1,'C')" type="text" min="0">
                             <label *ngIf="grupoC[3]" class="col-4 text-center" for="">{{grupoC[3].nome}}</label>
                      </div>
               </div>
@@ -87,20 +87,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoD" class="col-4 text-center" for="">{{grupoD[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoD[0].g1"
-                                   (change)="mudaResultado(grupoD[0],grupoD[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoD[0],grupoD[1],1,'D')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoD[1].g1"
-                                   (change)="mudaResultado(grupoD[0],grupoD[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoD[0],grupoD[1],1,'D')" type="text" min="0">
                             <label *ngIf="grupoD[1]" class="col-4 text-center" for="">{{grupoD[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoD[2]" class="col-4 text-center" for="">{{grupoD[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoD[2].g1"
-                                   (change)="mudaResultado(grupoD[2],grupoD[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoD[2],grupoD[3],1,'D')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoD[3].g1"
-                                   (change)="mudaResultado(grupoD[2],grupoD[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoD[2],grupoD[3],1,'D')" type="text" min="0">
                             <label *ngIf="grupoD[3]" class="col-4 text-center" for="">{{grupoD[3].nome}}</label>
                      </div>
               </div>
@@ -112,20 +112,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoE" class="col-4 text-center" for="">{{grupoE[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoE[0].g1"
-                                   (change)="mudaResultado(grupoE[0],grupoE[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoE[0],grupoE[1],1,'E')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoE[1].g1"
-                                   (change)="mudaResultado(grupoE[0],grupoE[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoE[0],grupoE[1],1,'E')" type="text" min="0">
                             <label *ngIf="grupoE[1]" class="col-4 text-center" for="">{{grupoE[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoE[2]" class="col-4 text-center" for="">{{grupoE[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoE[2].g1"
-                                   (change)="mudaResultado(grupoE[2],grupoE[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoE[2],grupoE[3],1,'E')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoE[3].g1"
-                                   (change)="mudaResultado(grupoE[2],grupoE[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoE[2],grupoE[3],1,'E')" type="text" min="0">
                             <label *ngIf="grupoE[3]" class="col-4 text-center" for="">{{grupoE[3].nome}}</label>
                      </div>
               </div>
@@ -137,20 +137,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoF" class="col-4 text-center" for="">{{grupoF[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoF[0].g1"
-                                   (change)="mudaResultado(grupoF[0],grupoF[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoF[0],grupoF[1],1,'F')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoF[1].g1"
-                                   (change)="mudaResultado(grupoF[0],grupoF[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoF[0],grupoF[1],1,'F')" type="text" min="0">
                             <label *ngIf="grupoF[1]" class="col-4 text-center" for="">{{grupoF[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoF[2]" class="col-4 text-center" for="">{{grupoF[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoF[2].g1"
-                                   (change)="mudaResultado(grupoF[2],grupoF[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoF[2],grupoF[3],1,'F')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoF[3].g1"
-                                   (change)="mudaResultado(grupoF[2],grupoF[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoF[2],grupoF[3],1,'F')" type="text" min="0">
                             <label *ngIf="grupoF[3]" class="col-4 text-center" for="">{{grupoF[3].nome}}</label>
                      </div>
               </div>
@@ -162,20 +162,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoG" class="col-4 text-center" for="">{{grupoG[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoG[0].g1"
-                                   (change)="mudaResultado(grupoG[0],grupoG[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoG[0],grupoG[1],1,'G')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoG[1].g1"
-                                   (change)="mudaResultado(grupoG[0],grupoG[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoG[0],grupoG[1],1,'G')" type="text" min="0">
                             <label *ngIf="grupoG[1]" class="col-4 text-center" for="">{{grupoG[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoG[2]" class="col-4 text-center" for="">{{grupoG[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoG[2].g1"
-                                   (change)="mudaResultado(grupoG[2],grupoG[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoG[2],grupoG[3],1,'G')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoG[3].g1"
-                                   (change)="mudaResultado(grupoG[2],grupoG[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoG[2],grupoG[3],1,'G')" type="text" min="0">
                             <label *ngIf="grupoG[3]" class="col-4 text-center" for="">{{grupoG[3].nome}}</label>
                      </div>
               </div>
@@ -187,20 +187,20 @@
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoH" class="col-4 text-center" for="">{{grupoH[0].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoH[0].g1"
-                                   (change)="mudaResultado(grupoH[0],grupoH[1],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoH[0],grupoH[1],1,'H')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoH[1].g1"
-                                   (change)="mudaResultado(grupoH[0],grupoH[1],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoH[0],grupoH[1],1,'H')" type="text" min="0">
                             <label *ngIf="grupoH[1]" class="col-4 text-center" for="">{{grupoH[1].nome}}</label>
                      </div>
 
                      <div class="grupos-rodadas-confrontos">
                             <label *ngIf="grupoH[2]" class="col-4 text-center" for="">{{grupoH[2].nome}}</label>
                             <input class="col-1" [(ngModel)]="grupoH[2].g1"
-                                   (change)="mudaResultado(grupoH[2],grupoH[3],1)" type="text" min="0"><span
+                                   (change)="mudaResultado(grupoH[2],grupoH[3],1,'H')" type="text" min="0"><span
                                    class="grupos-rodadas-confrontos-x">X</span>
                             <input class="col-1" [(ngModel)]="grupoH[3].g1"
-                                   (change)="mudaResultado(grupoH[2],grupoH[3],1)" type="text" min="0">
+                                   (change)="mudaResultado(grupoH[2],grupoH[3],1,'H')" type="text" min="0">
                             <label *ngIf="grupoH[3]" class="col-4 text-center" for="">{{grupoH[3].nome}}</label>
                      </div>
               </div>
